Implement pages and add product images

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -47,7 +47,8 @@
                 {% for product in products %}
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}">
+                        <img src="{{ product.image_url or url_for('static', filename='images/placeholder.jpg') }}"
+                            alt="{{ product.name }}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text">{{ product.price | format_currency }}</p>
