--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -19,20 +19,25 @@
         <tbody>
             {% for item in cart_items %}
             <tr>
-                <td>{{ item.product_name }}</td>
+                <td>
+                    <img src="{{ item.image_url }}" alt="{{ item.product_name }}" class="img-thumbnail"
+                        style="max-width: 100px;">
+                    {{ item.product_name }}
+                </td>
                 <td>{{ item.price | format_currency }}</td>
                 <td>
-                    <form method="post" action="{{ url_for('update_cart_item') }}">
-                        <input type="hidden" name="item_id" value="{{ item.id }}">
-                        <input type="number" name="quantity" value="{{ item.quantity }}" min="1" class="form-control">
-                        <button type="submit" class="btn btn-primary btn-sm mt-1">Update</button>
+                    <form action="{{ url_for('update_cart_item') }}" method="post" class="form-inline">
+                        <input type="hidden" name="item_id" value="{{ item.product_id }}">
+                        <input type="number" name="quantity" value="{{ item.quantity }}" min="1"
+                            class="form-control form-control-sm" style="width: 60px;">
+                        <button type="submit" class="btn btn-sm btn-secondary ml-2">Update</button>
                     </form>
                 </td>
                 <td>{{ (item.price * item.quantity) | format_currency }}</td>
                 <td>
-                    <form method="post" action="{{ url_for('remove_from_cart') }}">
-                        <input type="hidden" name="item_id" value="{{ item.id }}">
-                        <button type="submit" class="btn btn-danger btn-sm">Remove</button>
+                    <form action="{{ url_for('remove_from_cart') }}" method="post">
+                        <input type="hidden" name="item_id" value="{{ item.product_id }}">
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
                     </form>
                 </td>
             </tr>
