--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -5,7 +5,7 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6">
-            <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div id="productCarousel" class="carousel slide">
                 <div class="carousel-inner">
                     {% for image_url in product.images %}
                     <div class="carousel-item {% if loop.first %}active{% endif %}">
@@ -48,15 +48,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
-
-{% block scripts %}
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var productCarousel = document.querySelector('#productCarousel');
-        new bootstrap.Carousel(productCarousel, {
-            interval: false
-        });
-    });
-</script>
 {% endblock %}
