--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -65,3 +65,37 @@ footer {
     justify-content: center;
     margin-top: 20px;
 }
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.rating>input {
+    display: none;
+}
+
+.rating>label {
+    position: relative;
+    width: 1.1em;
+    font-size: 2em;
+    color: #ccc;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 1;
+}
+
+.rating>label:hover,
+.rating>label:hover~label {
+    color: #ffd700;
+}
+
+.rating>input:checked~label {
+    color: #ffd700;
+}
