--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -27,7 +27,7 @@
                 <td>{{ item.price | format_currency }}</td>
                 <td>
                     <form action="{{ url_for('update_cart_item') }}" method="post" class="form-inline">
-                        <input type="hidden" name="item_id" value="{{ item.product_id }}">
+                        <input type="hidden" name="product_id" value="{{ item.product_id }}">
                         <input type="number" name="quantity" value="{{ item.quantity }}" min="1"
                             class="form-control form-control-sm" style="width: 60px;">
                         <button type="submit" class="btn btn-sm btn-secondary ml-2">Update</button>
@@ -36,7 +36,7 @@
                 <td>{{ (item.price * item.quantity) | format_currency }}</td>
                 <td>
                     <form action="{{ url_for('remove_from_cart') }}" method="post">
-                        <input type="hidden" name="item_id" value="{{ item.product_id }}">
+                        <input type="hidden" name="product_id" value="{{ item.product_id }}">
                         <button type="submit" class="btn btn-sm btn-danger">Remove</button>
                     </form>
                 </td>
