--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -19,53 +19,21 @@ footer {
 
 .card {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: 0.3s;
 }
 
 .card:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.product-images {
-    position: relative;
+.product-carousel .carousel-inner {
     height: 200px;
-    overflow: hidden;
 }
 
 .product-image {
     width: 100%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
 }
-
-.image-navigation {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-}
-
-.image-navigation button {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.image-navigation button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.pagination {
-    justify-content: center;
-    margin-top: 20px;
-}
-
 
 .rating {
     display: flex;
